@@ -20,6 +20,7 @@
 11-Sep-2018    V0.19 add dictionary method for citation author aggregation
                      adjust cardinality of entity and assembly identifier categories
 14-Sep-2018    V0.20 Require at least one record in any array type, adjust constraints on iterables.
+18-Sep-2018    V0.21 Require homogeneous categories/classes in JSON schema production.
 
 
 
